# react-native-nitro-inspire-face

./: CONTRIBUTING.md  NitroInspireFace.podspec  README.md  app.plugin.js  lefthook.yml  nitro.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  deploy-docs.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/nitroinspireface/: HybridAssetManager.kt  NitroInspireFace.kt  NitroInspireFacePackage.kt
android/src/main/java/com/nitroinspireface/: NitroInspireFacePackage.kt
cpp/: HybridImageBitmap.cpp  HybridImageBitmap.hpp  HybridImageStream.cpp  HybridImageStream.hpp  HybridInspireFace.cpp  HybridInspireFace.hpp  HybridSession.cpp  HybridSession.hpp  NitroImageBitmap.cpp  NitroImageBitmap.hpp  NitroImageStream.cpp  NitroImageStream.hpp  NitroInspireFace.cpp  NitroInspireFace.hpp  NitroSession.cpp  NitroSession.hpp
docs/: bun.lockb  docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: basic-usage.md  installation.md  intro.md  vision-camera-example.md
example/: app.json  babel.config.js  package.json
example/android/: settings.gradle
example/ios/: Podfile
example/src/: App.tsx  BasicUsage.tsx  CameraPermisisonGuard.tsx
ios/: HybridAssetManager.swift  NitroInspireFace.swift
ios/MNN.xcframework/: Info.plist
src/: AssetManager.nitro.ts  ImageBitmap.nitro.ts  ImageStream.nitro.ts  InspireFace.nitro.ts  NitroInspireFace.nitro.ts  Session.nitro.ts  index.tsx  types.ts
(+48 files in other folders)
